feat(repository-source): harden S03 parity boundary
Slice-ID: S03

Harden repository-source workspace and metadata boundaries, keep Java AST ownership outside the service, and add orchestrator handoff validation for opaque source snapshot/artifact references.

Verification: ./gradlew :services:repository-source-service:test --dependency-verification strict --console=plain --stacktrace

Verification: ./gradlew :services:analysis-orchestrator-service:test --dependency-verification strict --console=plain --stacktrace

Verification: ./gradlew :forensic-analytics-adapter-repository-source:test --dependency-verification strict --console=plain --stacktrace

Verification: ./gradlew test --dependency-verification strict --console=plain --stacktrace

Verification: scoped repository-source legacy import scan; git diff --check; python3 -m json.tool docs/workflow/context-pack.json >/dev/null